--- a/style.css
+++ b/style.css
@@ -10,11 +10,11 @@
 body {
     min-height: 100vh;
     font-family: "Montserrat", sans-serif;
+    margin: 0 auto;
 }
 nav {
-    /* padding: 22px 0; */
+    padding: 20px 0;
     width: 100%;
-    min-height: 80px;
     display: flex;
     align-items: center;
 }
@@ -25,15 +25,41 @@ nav ul {
     justify-content: space-evenly;
     align-items: center;
 }
-
-nav ul li {
+nav li {
     list-style: none;
     font-size: 1.1rem;
     text-transform: uppercase;
-    font-weight: bold;
+    font-weight: 700;
+    position: relative;
+    transition: 0.2s ease;
+    cursor: pointer;
 }
-nav ul li:hover {
+
+nav li:first-child {
     color: #5f04aa;
+}
+
+nav li:first-child:before {
+    content: "";
+    background-color: #5f04aa;
+    height: 5px;
+    width: 100%;
+    transform: translateY(-30px);
+    position: absolute;
+}
+
+nav li:hover {
+    color: #5f04aa;
+    
+}
+
+nav li:hover:before {
+    content: "";
+    background-color: #5f04aa;
+    height: 5px;
+    width: 100%;
+    transform: translateY(-30px);
+    position: absolute;
 }
 
 #language {
@@ -47,7 +73,7 @@ header {
 }
 
 .main-header {
-    padding: 50px;
+    padding: 100px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -69,4 +95,205 @@ header {
     font-weight: bold;
     letter-spacing: 3px;
     text-transform: uppercase;
+    transition: 0.3s ease;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: white;
+    color: black;
+}
+
+.header-text {
+    text-align: center;
+    padding: 50px;
+    font-size: 1.1rem;
+    font-weight: 700;
+    width: 60%;
+    margin: 0 auto;
+}
+
+.icon-part {
+    background-color: black;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.icon-part-container {
+    display: flex;
+    padding: 80px;
+}
+
+.list-icon-part {
+    display: flex;
+    flex-direction: column;
+    color: white;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    width: 80%;
+    height: 500px;
+    position: relative;
+}
+.list-icon-part h3 {
+    font-weight: 700;
+    text-transform: uppercase;
+    margin: 15px 0;
+}
+
+.list-icon-part p {
+    width: 70%;
+    height: 80px;
+}
+
+.list-icon-part button {
+    padding: 18px 30px;
+    color: white;
+    background: transparent;
+    border: 1px solid white;
+    font-size: 1rem;
+    font-weight: bold;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    transition: 0.3s ease;
+    cursor: pointer;
+    position: absolute;
+    bottom: 0;
+}
+
+.list-icon-part button:hover {
+    background-color: white;
+    color: black;
+}
+
+.news-part {
+    background-color: #f7f7f7;
+}
+
+.header-news {
+    display: flex;
+    padding: 100px;
+    justify-content: space-evenly;
+}
+
+.header-news button {
+    padding: 15px 25px;
+    color: black;
+    background: transparent;
+    border: 1px solid black;
+    font-size: 0.9rem;
+    font-weight: bold;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    transition: 0.3s ease;
+    cursor: pointer;
+}
+
+.left-part H2  {
+    text-transform: uppercase;
+    letter-spacing: 3px;
+}
+.main-news {
+   width: 100%;
+   display: flex;
+   justify-content: center;
+}
+.main-news-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    max-width: 65%;
+}
+
+.news-content {
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    text-align: start;
+    margin: 0 50px ;
+    min-height: 600px;
+}
+
+.news-content p {
+    font-weight: 700;
+    margin: 0 0 15px 0;
+    line-height: 25px;
+}
+.news-content h4 {
+    font-size: 1.2rem;
+    margin: 18px 0;
+}
+
+.mn-pic img {
+    width: 100%;
+    filter: drop-shadow(1px 2px 3px rgba(0, 0, 0, 0.575));
+}
+
+a {
+    text-decoration: none;
+    font-size: 0.9rem;
+    font-weight: bold;
+    color: #5f04aa;
+}
+.link {
+    margin: 10px 0;
+    position: absolute;
+    letter-spacing: 2px;
+    bottom: 0;
+    left: 0;
+    text-transform: uppercase;
+}
+
+.contact {
+    background-color: white;
+}
+
+.contact-list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+
+}
+
+.list {
+    max-width: 10%;
+    margin: 50px 70px;
+}
+
+.list h5 {
+    font-size: 1.2rem;
+    text-transform: uppercase;
+}
+
+.list ul li {
+    list-style: none;
+}
+
+.contact-medias {
+    display: flex;
+    justify-content: center;
+    padding: 50px 0;
+}
+
+footer {
+    background-color: black;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+footer h3 {
+    text-transform: uppercase;
+    padding: 20px;
+}
+
+footer ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+    list-style: none;
 }
