--- a/style.css
+++ b/style.css
@@ -106,16 +106,17 @@ button:hover {
 
 .header-text {
     text-align: center;
-    padding: 50px;
+    padding: 50px 0;
     font-size: 1.1rem;
     font-weight: 700;
-    width: 60%;
+    line-height: 34px;
+    width: 1100px;
     margin: 0 auto;
 }
 
 .icon-part {
     background-color: black;
-    width: 100%;
+    padding: 65px 0;
     display: flex;
     justify-content: center;
 }
